# gh-action-demo

./: pyproject.toml
.github/workflows/: build_py_dist.yml  child_branch_publish.yml  publish_pypi.yml  testpypi_publish.yml
src/gh_action_demo/: main.py
